# qtinterval

./: README.md  setup.py  sleeptest.py
cmake/: CMakeLists.txt  setup.py
qtinterval/: __init__.py
src/: pybind11_playground.cpp  qtinterval.cpp
